--- a/part4/blog/package.json
+++ b/part4/blog/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "Junichi Sato",
   "license": "MIT",
@@ -17,6 +17,10 @@
     "mongoose": "^5.12.15"
   },
   "devDependencies": {
+    "jest": "^27.0.5",
     "nodemon": "^2.0.7"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
